--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <EditText
+        android:id="@+id/user_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/input_hint"
+        android:imeOptions="actionSend"
+        android:inputType="text" />
+
+    <Button
+        android:id="@+id/get_recipe"
+        android:layout_width="62dp"
+        android:layout_height="37dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/user_input"
+        android:text="@string/button" />
+
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="81dp" />
+
+    <Button
+        android:id="@+id/to_pantri_button"
+        android:layout_width="69dp"
+        android:layout_height="38dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="43dp"
+        android:textSize="12sp"
+        tools:text="@string/to_pantri_button" />
+
 
 </RelativeLayout>
